Update and rename _posts/0000-01-02-vibhu-exe.md to _posts/_posts/0000-01-02-vibhu-exe.md

--- a/_posts/_posts/0000-01-02-vibhu-exe.md
+++ b/_posts/_posts/0000-01-02-vibhu-exe.md
@@ -2,5 +2,5 @@
 layout: slide
 title: "Welcome to our second slide!"
 ---
-live young! die late!!
+live young! die later!!
 Use the left arrow to go back!
